force-app/main/default/objects/Account/fields/Evaluations_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Evaluations_Write_Off__c</fullName>
    <label>Evaluations Write Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>