force-app/main/default/objects/Account/fields/FDACCOUNTID__c.field-meta.xml
<CustomField>
    <fullName>FDACCOUNTID__c</fullName>
    <externalId>true</externalId>
    <label>FDACCOUNTID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>