force-app/main/default/objects/Account/fields/fdErrorCompany__c.field-meta.xml
<CustomField>
    <fullName>fdErrorCompany__c</fullName>
    <label>fdErrorCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>