force-app/main/default/objects/Account/fields/Finch_Club_Members__c.field-meta.xml
<CustomField>
    <fullName>Finch_Club_Members__c</fullName>
    <description>Amount of Finch Club Members under account.</description>
    <inlineHelpText>Amount of Finch Club Members under account.</inlineHelpText>
    <label>Finch Club Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>