force-app/main/default/objects/Account/fields/FinchClubAlias__c.field-meta.xml
<CustomField>
    <fullName>FinchClubAlias__c</fullName>
    <label>FinchClubAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>