force-app/main/default/objects/Account/fields/Flow_Resell_Account_From_Opp__c.field-meta.xml
<CustomField>
    <fullName>Flow_Resell_Account_From_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flow Resell Account From Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (Flow Resell Account From Opp)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>