force-app/main/default/objects/Account/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Account</label>
    <type>Checkbox</type>
</CustomField>