force-app/main/default/objects/Account/fields/Forecast_Rev__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Rev__c</fullName>
    <label>Forecast Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>