force-app/main/default/objects/Account/fields/Funded_Head__c.field-meta.xml
<CustomField>
    <fullName>Funded_Head__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>Funded Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>