force-app/main/default/objects/Account/fields/GetVSContacts__c.field-meta.xml
<CustomField>
    <fullName>GetVSContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GetVSContacts</label>
    <type>Checkbox</type>
</CustomField>