force-app/main/default/objects/Account/fields/GFK_Channel_Layer1__c.field-meta.xml
<CustomField>
    <fullName>GFK_Channel_Layer1__c</fullName>
    <label>GFK Channel Layer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller Channels (IT-Mailorder, VAR, Dealer)</fullName>
            </value>
            <value>
                <fullName>Retail Channels</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>