force-app/main/default/objects/Account/fields/GFK_Channel_Layer_2__c.field-meta.xml
<CustomField>
    <fullName>GFK_Channel_Layer_2__c</fullName>
    <label>GFK Channel Layer 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GFK_Channel_Layer1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SH - small/medium</fullName>
            </value>
            <value>
                <fullName>AV specialists</fullName>
            </value>
            <value>
                <fullName>OER - Office Equipment Retailers</fullName>
            </value>
            <value>
                <fullName>CS - Computershops</fullName>
            </value>
            <value>
                <fullName>HECS - Home Electronic Chain Store</fullName>
            </value>
            <value>
                <fullName>CES - Consumer Electronic Stores</fullName>
            </value>
            <value>
                <fullName>MM - Mass Merchandisers</fullName>
            </value>
            <value>
                <fullName>TCS - Telecommunication Specialists</fullName>
            </value>
            <value>
                <fullName>TIS - Telecom Independent Store</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Enduser - Schulen</fullName>
            </value>
            <value>
                <fullName>SH - Large</fullName>
            </value>
            <value>
                <fullName>Enduser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>