force-app/main/default/objects/Account/fields/globalRecordId__c.field-meta.xml
<CustomField>
    <fullName>globalRecordId__c</fullName>
    <description>record id from imported data for global rollout</description>
    <externalId>true</externalId>
    <label>globalRecordId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>