force-app/main/default/objects/Account/fields/Google_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Search__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com?#q=&apos;&amp;Name, &apos;Google Search&apos;, &apos;blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Search</label>
    <type>Text</type>
</CustomField>