force-app/main/default/objects/Account/fields/Government__c.field-meta.xml
<CustomField>
    <fullName>Government__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this account has a GSA or LOS, please check the box.</description>
    <label>Government</label>
    <type>Checkbox</type>
</CustomField>