force-app/main/default/objects/Account/fields/HiddenRecordtype__c.field-meta.xml
<CustomField>
    <fullName>HiddenRecordtype__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiddenRecordtype</label>
    <type>Checkbox</type>
</CustomField>