force-app/main/default/objects/Account/fields/Hot_Swap__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Swap</label>
    <type>Checkbox</type>
</CustomField>