force-app/main/default/objects/Account/fields/HQ_Account_Check_if_HQ__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account_Check_if_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HQ Account Flag</description>
    <inlineHelpText>Leave blank if this is a Daughter Account, if Parent/HQ account please check box.</inlineHelpText>
    <label>HQ Account</label>
    <type>Checkbox</type>
</CustomField>