force-app/main/default/objects/Account/fields/IFP_Showroom__c.field-meta.xml
<CustomField>
    <fullName>IFP_Showroom__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>IFP Showroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>