force-app/main/default/objects/Account/fields/importIgnoreDuplicates__c.field-meta.xml
<CustomField>
    <fullName>importIgnoreDuplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>importIgnoreDuplicates</label>
    <type>Checkbox</type>
</CustomField>