force-app/main/default/objects/Account/fields/LastSaleWeek__c.field-meta.xml
<CustomField>
    <fullName>LastSaleWeek__c</fullName>
    <description>The last day there was a sale made where we knew the end user via spa id</description>
    <label>SerialLastSaleWeek</label>
    <type>Date</type>
</CustomField>