force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>If the company has a legal name or a DBA and it is known, please enter that in this field</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>