force-app/main/default/objects/Account/fields/LRP_ViewBoard_Exists__c.field-meta.xml
<CustomField>
    <fullName>LRP_ViewBoard_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LRP ViewBoard Exists</label>
    <type>Checkbox</type>
</CustomField>