force-app/main/default/objects/Account/fields/mapConId__c.field-meta.xml
<CustomField>
    <fullName>mapConId__c</fullName>
    <label>mapConId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>