force-app/main/default/objects/Account/fields/massUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>massUpdateFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag for records that will be updated in excel. Sometimes need to flag record, pull other data, export, update in excel , update records in mass and remove flag</description>
    <label>massUpdateFlag</label>
    <type>Checkbox</type>
</CustomField>