force-app/main/default/objects/Account/fields/migrationChannelType__c.field-meta.xml
<CustomField>
    <fullName>migrationChannelType__c</fullName>
    <label>migrationChannelType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>