force-app/main/default/objects/Account/fields/MigrationNote__c.field-meta.xml
<CustomField>
    <fullName>MigrationNote__c</fullName>
    <label>MigrationNote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>