force-app/main/default/objects/Account/fields/migrationtExternalId__c.field-meta.xml
<CustomField>
    <fullName>migrationtExternalId__c</fullName>
    <description>external id from any system during data migration</description>
    <externalId>true</externalId>
    <label>migrationtExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>