force-app/main/default/objects/Account/fields/myViewBoard_Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>myViewBoard_Enroll_Date__c</fullName>
    <description>Date of enrollment. This field is created on 4.2.2021 , enrollments before this date, may have a blank value</description>
    <label>myViewBoard Enroll Date</label>
    <type>Date</type>
</CustomField>