force-app/main/default/objects/Account/fields/Name_Zip__c.field-meta.xml
<CustomField>
    <fullName>Name_Zip__c</fullName>
    <label>Name &amp; Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>