force-app/main/default/objects/Account/fields/NCES_Discover_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_Discover_ID__c</fullName>
    <description>DSCORGPKG__DiscoverOrg_ID__c</description>
    <formula>if(isblank( DistrictId__c ),  DOZISF__ZoomInfo_Id__c  , DistrictId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCES/Discover ID</label>
    <type>Text</type>
</CustomField>