force-app/main/default/objects/Account/fields/New_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Business__c</fullName>
    <formula>Opps_Purchasing__c &lt; 1

&amp;&amp;  (isblank(Opp_Newest_Date__c)
      || datevalue(Opp_Newest_Date__c) + 182 &lt; today())

&amp;&amp;  (isblank(OppClosedMax__c)
      || OppClosedMax__c + 182 &lt; today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business</label>
    <type>Checkbox</type>
</CustomField>