force-app/main/default/objects/Account/fields/Non_Geo_Account__c.field-meta.xml
<CustomField>
    <fullName>Non_Geo_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When account is not assigned via geo territories, tells trigger not to update owners and account teams</description>
    <label>Non Geo Account</label>
    <type>Checkbox</type>
</CustomField>