force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>This is the number of employees at this company (if known).</description>
    <label>Number of Employees/doctors/staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>