force-app/main/default/objects/Account/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <description>This is the number of rooms / units and/or stores the account has (if known).</description>
    <label>Number of Rooms / Units / Stores / Beds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2 to 9</fullName>
            </value>
            <value>
                <fullName>10 to 49</fullName>
            </value>
            <value>
                <fullName>50 to 150</fullName>
            </value>
            <value>
                <fullName>Over 150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>