force-app/main/default/objects/Account/fields/Opp_Newest_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Newest_Date__c</fullName>
    <label>Opp Newest Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>