force-app/main/default/objects/Account/fields/OppClosedMax__c.field-meta.xml
<CustomField>
    <fullName>OppClosedMax__c</fullName>
    <label>OppClosedMax</label>
    <summarizedField>Opportunity.Closed_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Won, Closed Lost, Close Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>