force-app/main/default/objects/Account/fields/OppCount__c.field-meta.xml
<CustomField>
    <fullName>OppCount__c</fullName>
    <label>OppCount</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>