force-app/main/default/objects/Account/fields/OppOldest__c.field-meta.xml
<CustomField>
    <fullName>OppOldest__c</fullName>
    <description>get oldest opportunity to determine if it is new for ABM purposes. Different than New Business, this helps exclude ABM activities of existing accounts. it may have some false exclusions but this imperfect process is the best version of the truth.</description>
    <label>OppOldest</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>