force-app/main/default/objects/Account/fields/oppOldestdate__c.field-meta.xml
<CustomField>
    <fullName>oppOldestdate__c</fullName>
    <formula>if(isblank(datevalue(OppOldest__c )), DATE(2099,12,25)  ,datevalue(OppOldest__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oppOldestDate</label>
    <type>Date</type>
</CustomField>