force-app/main/default/objects/Account/fields/Opps_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Opps_Purchasing__c</fullName>
    <label>Opps Purchasing</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Purchasing, Development, Negotiation, Pending PO, Closed Won, Purchasing, Distributor SPA Request, Development, Negotiation, Pending PO, Purchasing, Distributor SPA Request</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>