force-app/main/default/objects/Account/fields/Oracle_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>