force-app/main/default/objects/Account/fields/Oracle_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Name__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>