force-app/main/default/objects/Account/fields/Overwrite_County__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_County__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this prevents update of county name and allows manual entry. Sometimes the city and state combo for county is incorrect as some cities have multiple counties.</description>
    <label>Overwrite County</label>
    <type>Checkbox</type>
</CustomField>