force-app/main/default/objects/Account/fields/ownerUpdateAttempt__c.field-meta.xml
<CustomField>
    <fullName>ownerUpdateAttempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ownerUpdateAttempt</label>
    <type>Checkbox</type>
</CustomField>