force-app/main/default/objects/Account/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>IF( Parent.Name = &quot;&quot;, Name, Parent.Name)</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>