force-app/main/default/objects/Account/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>if( ParentId = null, Name,Parent.Name)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>