force-app/main/default/objects/Account/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <formula>if(isblank(ParentId) , Owner.FirstName&amp;&quot; &quot;&amp;Owner.LastName, Parent.Owner.FirstName&amp;&quot; &quot;&amp;Parent.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>