force-app/main/default/objects/Account/fields/Parent_Name_Alt__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name_Alt__c</fullName>
    <formula>if(not(isblank(Parent.ParentId)), Parent.Parent.Name, 
if(not(isblank(ParentId)),Parent.Name, 
Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name Alt</label>
    <type>Text</type>
</CustomField>