force-app/main/default/objects/Account/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <description>Created for Account Clone button</description>
    <formula>Parent.Name</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>