force-app/main/default/objects/Account/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <formula>if(  Parent.Id =&quot;&quot;,Id,  
if(  Parent.Parent.Id  =&quot;&quot;,Parent.Id, 
if(  Parent.Parent.Parent.Id =&quot;&quot;,Parent.Parent.Id, 
Parent.Parent.Parent.Id )))</formula>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>