force-app/main/default/objects/Account/fields/Partner_Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Incentive_Type__c</fullName>
    <label>Partner Incentive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Incentive_Type</valueSetName>
    </valueSet>
</CustomField>