force-app/main/default/objects/Account/fields/Partner_Portal_Reseller_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Reseller_Tier__c</fullName>
    <description>This is the Reseller Partner Tier. It looks at Hierarchical accounts to get the correct POS. The POS Name must be linked/mapped to a SFDC account to see the pos py and cy and must be in the POS_revenue__c custom object</description>
    <formula>if(not(isblank(ParentId)) &amp;&amp; not(isblank(text(Parent.Reseller_Tier_Override__c))),
text(Parent.Reseller_Tier_Override__c),
if(not(isblank(ParentId)),Parent.Reseller_Tier_Portal__c,
if(not(isblank(text(Reseller_Tier_Override__c))),text(Reseller_Tier_Override__c),
Reseller_Tier_Portal__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Portal Reseller Tier</label>
    <type>Text</type>
</CustomField>