force-app/main/default/objects/Account/fields/Partner_Status_Layer_1__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status_Layer_1__c</fullName>
    <label>Partner Status Layer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finch Partner</fullName>
            </value>
            <value>
                <fullName>Online Partner</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
            <value>
                <fullName>LFD Partner</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
            <value>
                <fullName>Distribution Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>