force-app/main/default/objects/Account/fields/Partner_Status_Layer_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status_Layer_2__c</fullName>
    <label>Partner Status Layer 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Status_Layer_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealers View Partner</fullName>
            </value>
            <value>
                <fullName>Touch IT Partner</fullName>
            </value>
            <value>
                <fullName>Connect IT Partner</fullName>
            </value>
            <value>
                <fullName>Color IT Partner</fullName>
            </value>
            <value>
                <fullName>Certified Msp</fullName>
            </value>
            <value>
                <fullName>Authorised LFD-Reseller</fullName>
            </value>
            <value>
                <fullName>Certified AV-Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>