force-app/main/default/objects/Account/fields/Partner_Type_Portal__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type_Portal__c</fullName>
    <label>Partner Type Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Marketing Partner/Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>