force-app/main/default/objects/Account/fields/PD_Notes__c.field-meta.xml
<CustomField>
    <fullName>PD_Notes__c</fullName>
    <label>PD Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>