force-app/main/default/objects/Account/fields/Pipeline_opps__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_opps__c</fullName>
    <label>Pipeline_opps</label>
    <summarizedField>Opportunity.Pipeline__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Development, Negotiation, Pending PO, Distributor SPA Request</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>