force-app/main/default/objects/Account/fields/portalAwaitingDocuments__c.field-meta.xml
<CustomField>
    <fullName>portalAwaitingDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>portalAwaitingDocuments</label>
    <type>Checkbox</type>
</CustomField>