force-app/main/default/objects/Account/fields/POS_Alias__c.field-meta.xml
<CustomField>
    <fullName>POS_Alias__c</fullName>
    <label>POS Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>