force-app/main/default/objects/Account/fields/POS_CY__c.field-meta.xml
<CustomField>
    <fullName>POS_CY__c</fullName>
    <formula>POS_Revenue__r.CY_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>