force-app/main/default/objects/Account/fields/POS_Ending_OLD__c.field-meta.xml
<CustomField>
    <fullName>POS_Ending_OLD__c</fullName>
    <description>Custom date field used in conjunction with QTD Revenue for Weekly Revenue Tracking.  Users  enter the QTD revenue amount and the POS ending date, and this allows the Est Finish to calculate.</description>
    <inlineHelpText>Enter the POS Ending date for the QTD Revenue</inlineHelpText>
    <label>POS Ending OLD</label>
    <type>Date</type>
</CustomField>