force-app/main/default/objects/Account/fields/POS_PY__c.field-meta.xml
<CustomField>
    <fullName>POS_PY__c</fullName>
    <formula>POS_Revenue__r.PY_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS PY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>