force-app/main/default/objects/Account/fields/POS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>POS_Revenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Revenue</label>
    <referenceTo>POS_Revenue__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>