force-app/main/default/objects/Account/fields/POS_Sales_CQ__c.field-meta.xml
<CustomField>
    <fullName>POS_Sales_CQ__c</fullName>
    <label>POS Sales CQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>