force-app/main/default/objects/Account/fields/POS_Sales_CY__c.field-meta.xml
<CustomField>
    <fullName>POS_Sales_CY__c</fullName>
    <label>POS Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>