force-app/main/default/objects/Account/fields/pp_Count_of_Enrollees_Active__c.field-meta.xml
<CustomField>
    <fullName>pp_Count_of_Enrollees_Active__c</fullName>
    <defaultValue>0</defaultValue>
    <label>pp Count of Enrollees Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>