force-app/main/default/objects/Account/fields/Primary_Reseller_VIP__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reseller_VIP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary reseller, originally for a VIP Express Exchange Acount but can be for any primary reseller

Do not give access to partner portal users because it can inadverntly allow Resellers to see who an End User is buying from.</description>
    <inlineHelpText>Most likely reseller. If multiple, pick the most likely one.</inlineHelpText>
    <label>Primary Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>