force-app/main/default/objects/Account/fields/Primary_Shipping_Contatct__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Contatct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Shipping Contatct</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Shipping Contatct)</relationshipLabel>
    <relationshipName>ShippingCon</relationshipName>
    <type>Lookup</type>
</CustomField>