force-app/main/default/objects/Account/fields/ProAV_Certified__c.field-meta.xml
<CustomField>
    <fullName>ProAV_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProAV Certified</label>
    <type>Checkbox</type>
</CustomField>