force-app/main/default/objects/Account/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Place for Sales Reps to record product interest for an Account</description>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Display</fullName>
            </value>
            <value>
                <fullName>Desktop Virtualization</fullName>
            </value>
            <value>
                <fullName>Digital Photo Frames</fullName>
            </value>
            <value>
                <fullName>Monitors</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Projectors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>