force-app/main/default/objects/Account/fields/Projector__c.field-meta.xml
<CustomField>
    <fullName>Projector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projectors</label>
    <type>Checkbox</type>
</CustomField>