force-app/main/default/objects/Account/fields/Promethean__c.field-meta.xml
<CustomField>
    <fullName>Promethean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promethean</label>
    <type>Checkbox</type>
</CustomField>