force-app/main/default/objects/Account/fields/Purchase_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Purchase_This_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if a purchase is made in the POS week. Need to run a workflow rule to uncheck after 1 week and this can be used for sales rep alerts, workplace, and customer service</description>
    <label>SerialPurchase This Week</label>
    <type>Checkbox</type>
</CustomField>