force-app/main/default/objects/Account/fields/QTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QTD_Revenue__c</fullName>
    <description>Allows user to enter Quarter to Date revenue for an Account</description>
    <inlineHelpText>Enter the amount of Revenue Quarter to Date</inlineHelpText>
    <label>QTD Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>