force-app/main/default/objects/Account/fields/QTD_Revenue_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>QTD_Revenue_Last_Updated__c</fullName>
    <description>Data QTD Revenue was last updated.  Set by system.</description>
    <inlineHelpText>Data QTD Revenue was last updated.  Set by system.</inlineHelpText>
    <label>QTD Revenue Last Updated</label>
    <type>Date</type>
</CustomField>