force-app/main/default/objects/Account/fields/QTD_Revenue_Status__c.field-meta.xml
<CustomField>
    <fullName>QTD_Revenue_Status__c</fullName>
    <description>Number of days since QTD Revenue Last Updated</description>
    <formula>IMAGE(
IF(Today()- QTD_Revenue_Last_Updated__c &lt;7,&quot;/img/samples/light_green.gif&quot;,
  IF(Today()- QTD_Revenue_Last_Updated__c =7,&quot;/img/samples/light_yellow.gif&quot;,
    IF(Today()- QTD_Revenue_Last_Updated__c &gt;7, &quot;/img/samples/light_red.gif&quot;,
      &quot;/s.gif&quot;
     )
   )
)
,&quot;Status Image. Red: &gt;7Days, Yellow: =7Days, Green: &lt;7Days&quot;
)</formula>
    <inlineHelpText>Number of days since QTD Revenue Last Updated</inlineHelpText>
    <label>QTD Revenue Status</label>
    <type>Text</type>
</CustomField>