force-app/main/default/objects/Account/fields/QtyLastSaleWeek__c.field-meta.xml
<CustomField>
    <fullName>QtyLastSaleWeek__c</fullName>
    <description>This is quantity purchased based on the most recent sale</description>
    <label>SerialQtyLastSaleWeek</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>